--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.lib4j.maven.plugin</groupId>
+        <groupId>org.fastjax.maven.plugin</groupId>
         <artifactId>xml-maven-plugin</artifactId>
       </plugin>
     </plugins>
