--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <!--
-  Copyright (c) 2012 lib4j
+  Copyright (c) 2012 EasyJAX
   
   Permission ics hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to deal
@@ -20,11 +20,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.lib4j.maven</groupId>
+    <groupId>org.easyjax.maven</groupId>
     <artifactId>plugin</artifactId>
     <version>1.3.2-SNAPSHOT</version>
   </parent>
-  <groupId>org.lib4j.maven.plugin</groupId>
+  <groupId>org.easyjax.maven.plugin</groupId>
   <artifactId>cert-maven-plugin</artifactId>
   <version>1.0.6-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
@@ -62,6 +62,7 @@
       <plugin>
         <groupId>org.fastjax.maven.plugin</groupId>
         <artifactId>xml-maven-plugin</artifactId>
+        <version>2.0.5-SNAPSHOT</version>
       </plugin>
     </plugins>
   </build>
