--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.easyjax.maven</groupId>
-    <artifactId>plugin</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <groupId>org.easyjax</groupId>
+    <artifactId>easyjax</artifactId>
+    <version>3.7.5-SNAPSHOT</version>
   </parent>
-  <groupId>org.easyjax.maven.plugin</groupId>
+  <groupId>org.easyjax</groupId>
   <artifactId>cert-maven-plugin</artifactId>
-  <version>1.0.6-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>${project.groupId}:${project.artifactId}</name>
   <properties>
@@ -58,9 +57,26 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.fastjax.maven.plugin</groupId>
+        <groupId>org.fastjax.xml</groupId>
         <artifactId>xml-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-core</artifactId>
+      <version>3.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-plugin-api</artifactId>
+      <version>3.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.plugin-tools</groupId>
+      <artifactId>maven-plugin-annotations</artifactId>
+      <version>3.5</version>
+    </dependency>
+  </dependencies>
 </project>
