--- a/pom.xml
+++ b/pom.xml
@@ -59,21 +59,65 @@
       </plugin>
     </plugins>
   </build>
+<profiles>
+    <profile>
+      <id>maven-invoker-plugin</id>
+      <activation>
+        <property>
+          <name>!maven.test.skip</name>
+        </property>
+      </activation>
+      <properties>
+        <maven.test.skip>true</maven.test.skip>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-invoker-plugin</artifactId>
+            <executions>
+              <execution>
+                <configuration>
+                  <profiles>
+                    <profile>!maven-invoker-plugin</profile>
+                    <profile>plugin-test</profile>
+                  </profiles>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>plugin-test</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.openjax.support</groupId>
+            <artifactId>cert-maven-plugin</artifactId>
+            <version>${project.version}</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>import</goal>
+                </goals>
+                <phase>test</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
   <dependencies>
     <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-core</artifactId>
-      <version>3.5.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-plugin-api</artifactId>
-      <version>3.5.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.plugin-tools</groupId>
-      <artifactId>maven-plugin-annotations</artifactId>
-      <version>3.5</version>
+      <groupId>org.openjax.standard.maven</groupId>
+      <artifactId>maven-mojo</artifactId>
+      <version>0.3.5-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
