--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.openjax.standard.xml</groupId>
+        <groupId>org.openjax.ext.xml</groupId>
         <artifactId>xml-maven-plugin</artifactId>
       </plugin>
     </plugins>
@@ -117,7 +117,7 @@
   </profiles>
   <dependencies>
     <dependency>
-      <groupId>org.openjax.standard.maven</groupId>
+      <groupId>org.openjax.ext.maven</groupId>
       <artifactId>mojo</artifactId>
       <version>0.3.5-SNAPSHOT</version>
     </dependency>
